2020-08-10 disabling button after TRANSFER PAYED Removed, for changing clients after paying.
2020-08-10 catering.backup database changed for adding column barcode into table clients
2020-08-11 catering.py adjusted for iterating over buttons due to above correction
2020-08-12 catering.py tableseats all seats can be freed, if no orderlines are presemt for the client
           if orderlines are presens all seats excluding the last one can be freed,
           the last seat will only be removed by the TRANSFER PAYED button. (for paying purposes)
2020-08-12 Last change reversed for problems with interchanging users will solve thirst before changing again.
2020-08-12 catering.py problem solved with switching clients so again implemented free tableseats under conditions
           orderlines / no orderlines
2020-08-12 catering.py info.screen changed to plaintextedit for scrolling. Also the explanation of table 
           arrangements added.
2020-08-12 catering.py in code insertArticles and changeArticles added selling_price, selling_contents and short_description
           several adjustments for positioning and sizing changed.
2020-08-13 catering.py acceslevel 3 removed so 0 1 and 2 remain, popup messages removed in user area and replaced
           by notifications in notification bar.
2020-08-13 catering.backup database changed for changing accesslevels
2020-08-13 catering.py added possibility to change background color of product buttons.
           added python script to modify in batch per row if desired (buttoncolors.py) choose colorpicker at:
           https://htmlcolorcodes.com and copy and paste #xxxxxx color in python script.
2020-08-13 catering.backup database added column bg_color in table buttons.
2020-08-13 catering.py possibility added to change colors of groupbuttons to
2020-08-13 catering.backup database table groupbuttons extended with column bg_color for groupbuttons
          
