@@ -35,5 +35,6 @@
 2020-08-13 catering.backup database added column bg_color in table buttons.
 2020-08-13 catering.py possibility added to change colors of groupbuttons to
 2020-08-13 catering.backup database table groupbuttons extended with column bg_color for groupbuttons
+2020-08-13 catering.py added module to switch clients between employees for take over button added in tablemangement screen.
           
 
